# netbox-prometheus-sd

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  netbox-prometheus-sd.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  docker.yml  main.yml
example/: docker-compose.yml
example/prometheus/: prometheus.yml
netbox_sd/: inventory.py  model.py  writer.py
tests/docker/: container-structure-test.yaml
tests/unit/: test_model.py  test_writer.py
