[tool.poetry]
name = "netbox-prometheus-sd"
version = "0.1.0"
description = "Servie discovery in Prometheus from Netbox"
authors = ["Felix Peters <felix.peters@breuninger.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pynetbox = "^7.0.1"
prometheus-client = "^0.15.0"
environs = "^9.5.0"
netaddr = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
